# kollab

./: .gitignore  Makefile  README.md  pyproject.toml
collaberr-app/: package-lock.json  package.json
collaberr-app/public/: index.html
collaberr-app/src/: App.js  RouterConfig.js  index.js
collaberr-app/src/Styles/: _components.scss  _core.scss  _layout.scss  _main.scss  style.css  style.css.map  style.scss
collaberr-app/src/api/: campaignData.js
collaberr-app/src/authorization/: auth.js
collaberr-app/src/components/: CampaignCard.js  topnav.js
collaberr-app/src/containers/: Footer.js  Layout.js  LeftNav.js  MainArea.js  TopNav.js  index.js
collaberr-app/src/routes/: AccountRoute.js  BusinessRoute.js  CampaignRoute.js  routes.js
core/apps/business/: apps.py  models.py  urls.py  views.py
core/apps/campaign/: forms.py  models.py  urls.py  views.py
core/apps/creator/: apps.py  models.py  urls.py  views.py
core/apps/home/: forms.py  urls.py  views.py
core/apps/user/: apps.py  models.py  urls.py  views.py
core/project/: asgi.py  urls.py
core/project/settings/: __init__.py  base.py  custom.py
core/static/css/: main.css  main.scss  reset.css  reset.css.map  reset.scss
core/templates/campaign/: campaign_create.html  campaign_details.html  campaign_home.html
core/templates/creator/: index.html
core/templates/home/: base.html  head.html  home.html  login advanced.html  login.html
core/templates/registration/: logged_out.html  login.html  signup.html  (+1 more)
project/business/: views.py
project/creator/: apps.py  views.py
project/project/: urls.py
(+31 files in other folders)
